--- a/reduca-web/public/index.html
+++ b/reduca-web/public/index.html
@@ -11,7 +11,7 @@
       content="Web site created using create-react-app"
     />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://kit.fontawesome.com/2222d512e2.js" crossorigin="anonymous"></script>
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
